fix selecting song when long tapping fileSizeLabel fix playlist mode in WebLooper.js (oh god. that old project's code is so bad)

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -147,16 +147,16 @@
                     <input style="width: 40%; margin-right: 5px;" type="number" value=10 step=1 min=0 id="seekDuration"><label for="seekDuration">Seek Duration: </label><label id="seekDurationDisplay" for="seekDuration">10 sec</label>
                 </div>
                 <div>
-                    <label><input type="checkbox" id="compactMode">Compact Mode</label>
+                    <label><input type="checkbox" id="compactMode" autocomplete="off">Compact Mode</label>
                 </div>
                 <div>
-                    <label><input type="checkbox" id="seekDistanceProportional" checked>Keep seek distance proportional with play speed</label>
+                    <label><input type="checkbox" id="seekDistanceProportional" autocomplete="off" checked>Keep seek distance proportional with play speed</label>
                 </div>
                 <div>
-                    <label><input type="checkbox" id="skipUnplayable" checked>Skip files that are unsupported</label>
+                    <label><input type="checkbox" id="skipUnplayable" autocomplete="off" checked>Skip files that are unsupported</label>
                 </div>
                 <div>
-                    <label><input type="checkbox" id="showLengths" checked>Display song durations</label>
+                    <label><input type="checkbox" id="showLengths" autocomplete="off" checked>Display song durations</label>
                 </div>
                 <div>
                     <button id="enterPIP" type="button"></button>
