--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -64,7 +64,7 @@
                 max-width: 25ch;
                 /* width: 25ch; */
                 text-wrap: nowrap;
-                overflow-x: auto;
+                overflow-x: scroll;
                 scrollbar-width: none;/*thin;*/
                 user-select: none;
                 cursor: cell;
@@ -81,7 +81,7 @@
                 max-width: 25ch;
                 /* width: 25ch; */
                 text-wrap: nowrap;
-                overflow-x: auto;
+                overflow-x: scroll;
                 scrollbar-width: none;/*thin;*/
             }
             .hoverable:hover{ background-color: rgb(200, 200, 200); }
