fix scrolling text not scrollable on firefox (attempt #2)

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -65,6 +65,7 @@
                 /* width: 25ch; */
                 text-wrap: nowrap;
                 overflow-x: scroll;
+                text-overflow: clip;
                 scrollbar-width: none;/*thin;*/
                 user-select: none;
                 cursor: cell;
@@ -82,6 +83,7 @@
                 /* width: 25ch; */
                 text-wrap: nowrap;
                 overflow-x: scroll;
+                text-overflow: clip;
                 scrollbar-width: none;/*thin;*/
             }
             .hoverable:hover{ background-color: rgb(200, 200, 200); }
