--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -64,6 +64,7 @@
                 max-width: 25ch;
                 /* width: 25ch; */
                 text-wrap: nowrap;
+                white-space: nowrap;
                 overflow-x: scroll;
                 text-overflow: clip;
                 scrollbar-width: none;/*thin;*/
@@ -82,6 +83,7 @@
                 max-width: 25ch;
                 /* width: 25ch; */
                 text-wrap: nowrap;
+                white-space: nowrap;
                 overflow-x: scroll;
                 text-overflow: clip;
                 scrollbar-width: none;/*thin;*/
