fix scrolling text not scrollable on firefox (attempt #4)

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -61,12 +61,6 @@
                 text-wrap: nowrap;
             }
             .creatureStatHeaderCell{
-                max-width: 25ch;
-                /* width: 25ch; */
-                text-wrap: nowrap;
-                white-space: nowrap;
-                overflow-x: scroll;
-                text-overflow: clip;
                 scrollbar-width: none;/*thin;*/
                 user-select: none;
                 cursor: cell;
@@ -85,6 +79,7 @@
                 text-wrap: nowrap;
                 white-space: nowrap;
                 overflow-x: scroll;
+                overflow: scroll;
                 text-overflow: clip;
                 scrollbar-width: none;/*thin;*/
             }
