--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -12,7 +12,7 @@
         <!-- <script defer src="../howler.js"></script> -->
         <!-- <script src="../ServiceWorker.js"></script> -->
         <link rel="stylesheet" href="../CSS/PlaylistCreator.css">
-        <!-- <link rel="stylesheet" id="compactModeStyleLink" href="../CSS/CompactMode.css" disabled> -->
+        <link rel="stylesheet" href="../CSS/CompactMode.css" id="compactModeStyleLink" disabled>
         <link rel="stylesheet" href="../CSS/background.css">
     </head>
     <body>
@@ -98,18 +98,18 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div style="position: relative; width: calc(100% / 3); max-width: 150px;" class="clickableButton tableBorder">
+                                <div style="position: relative; width: calc(100% / 3); max-width: 150px;" class="tableBorder">
                                     <input style="display: none;" class="muteCheckbox" type="checkbox" id="0Mute">
-                                    <label for="0Mute" style="cursor: pointer;">
+                                    <div>
                                         <!-- <img  src="../Icons/SpeakerIcon.svg" alt="Volume Changer & Mute Button"/> -->
                                         <svg style="width:100%; height:100%; position: absolute; left:50%; transform: translate(-50%, 0%)" xmlns="http://www.w3.org/2000/svg" version="1.0" width="500" height="500" viewBox="0 0 75 75"><path d="M39.389,13.769 L22.235,28.606 L6,28.606 L6,47.699 L21.989,47.699 L39.389,62.75 L39.389,13.769z" style="stroke-width:5;stroke-linejoin:round;"/><path d="M48,27.6a19.5,19.5 0 0 1 0,21.4M55.1,20.5a30,30 0 0 1 0,35.6M61.6,14a38.8,38.8 0 0 1 0,48.6" style="fill: none;stroke-width:5;stroke-linecap:round"/></svg>
                                         <div tabindex="0" id="volumePullsOpen" class="pullsOpen" data-onRightClick="volumeBoost" style="visibility: visible; position: absolute;">
-                                            <div >
+                                            <div>
                                                 <label for="0playVolume" style="color: black; position: absolute;">100%</label>
                                                 <input type="range" id="0playVolume" list='commonVolumesAndRates' max=1 min=0 value=1 step=0.01 style="writing-mode: vertical-lr; direction: rtl; width: 100%; height: 100%; position: relative;" />
                                             </div>
                                         </div>
-                                    </label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
