--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div id="dragOverDisplay"><div style="position: fixed; top: 50vh; left: 50vw; transform: translate(-50%, -50%);" class="text" ><b>Drop Here to add Music</b></div></div>
-        <div style="z-index: 2; background-color: lightgrey; width: max-content; margin-top: -20px; left: -9999px; position: fixed; pointer-events: none;" id="hoveredTimeDisplay"><div style="margin-left:1ch; margin-right:1ch; color: black; z-index: 2" class="prevent-select text"></div></div>
+        <div style="z-index: 2; background-color: lightgrey; width: max-content; position: fixed; top: 0; left: 0; pointer-events: none; transform: translate(-9999px, 0px);" id="hoveredTimeDisplay"><div style="margin-left:1ch; margin-right:1ch; color: black; z-index: 2" class="prevent-select text"></div></div>
 
         <input accept="audio/*" type="file" style="display: none;" id="0input" multiple>
         <input accept="audio/*" type="file" style="display: none;" id="inputDirectory" multiple webkitdirectory>
