refactor urls now they are cleaner

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -1,126 +1,2 @@
 <!DOCTYPE html>
-<html lang="en" style="cursor: progress">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-        <meta charset="utf-8">
-        <title>COS Stat List</title>
-        <meta name="description" content="Filter and sort creature stats for Creatures of Sonaria">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="mobile-web-app-capable" content="yes" />
-        <script src="cosStatList.js" defer></script>
-        
-        <style>
-            #loadingGray{
-                background-color: rgba(30, 30, 30, 0.1);
-                opacity: 0;
-                pointer-events: none;
-                position: fixed;
-                width: 200vw;
-                height: 200vh;
-                top: 50vh;
-                left: 50vw;
-                z-index: 15;
-                transform: translate(-50%, -50%);
-            }
-            #loadingGray[enable]{
-                transition: opacity 500ms;
-                transition-delay: 500ms;
-                opacity: 1;
-                cursor: wait;
-                pointer-events: all;
-            }
-
-            .clickableButton{
-                position: relative;
-                z-index: 0;
-                transition-property: background-color, box-shadow;
-                border-radius: 5px;
-                user-select: none;
-                -webkit-user-drag: none;
-                cursor: pointer;
-            }
-            .clickableButton:hover{ background-color: rgb(200, 200, 200); }
-            .clickableButton:active{
-                transition-duration: 50ms;
-                background-color: rgb(255, 255, 255);
-                box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-            }
-            
-            #statList{
-                border-width: 1px;
-                border-style: solid;
-                /* table-layout: fixed;
-                width: 100%; */
-            }
-            /*#statList > tbody > tr:nth-child(odd){*/
-            /*    background-color: #ebebeb;*/
-            /*}*/
-            .creatureTableRow{
-                text-align: center;
-                text-wrap: nowrap;
-            }
-            .creatureStatHeaderCell{
-                scrollbar-width: none;/*thin;*/
-                user-select: none;
-                cursor: cell;
-                background-color: white;
-            }
-            /*http://xahlee.info/comp/unicode_arrows.html*/
-            .headerCellAscending:after{
-                content: "↓";
-            }
-            .headerCellDescending:after{
-                content: "↑";
-            }
-            .creatureStatCell{
-                max-width: 25ch;
-                /* width: 25ch; */
-                height: 18px; /*-2px to account for border*/
-                text-wrap: nowrap;
-                white-space: nowrap;
-                overflow-x: scroll;
-                text-overflow: clip;
-                scrollbar-width: none;/*thin;*/
-            }
-            .hoverable:hover{ background-color: rgb(200, 200, 200); }
-            .focusable:focus{ outline: black solid 1px; }
-            .focusable:focus-visible{ outline: black solid 1px; }
-        </style>
-    </head>
-    <body>
-        <div id="loadingGray"></div>
-
-        <div style="border: 1px solid black; margin-bottom: 15px;">
-            <p style="font-weight: bold; margin: 0;">Filters</p>
-            <div id="filterConfigurations">
-
-            </div>
-            <div>
-                <button id="applyFilters" type="button">Submit Filter Changes</button>
-                <button id="createFilter" type="button">Add Filter</button>
-            </div>
-        </div>
-
-        <button id="addStatTypesButton" type="button">Configure stat types</button>
-        <table id="statList" tabindex="0" style="display: none">
-            <thead style="position: sticky; top: 0px; z-index: 1;">
-                <tr>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-
-        <p style="font-family: cursive, serif;font-weight: 500;cursor: inherit;" id="loadingText">LOADING SCRIPTS...</p>
-        <noscript style="font-family: serif; font-size: x-large;">YOU MUST ENABLE JAVASCRIPT FOR THIS WEBSITE TO WORK!!!!!</noscript>
-
-        <div id="floatingWindow" style="position:relative;width: max-content;max-width:75vw;height: 50vh;background-color:white;display: none;overflow:scroll;border:gray solid 1px;">
-            <input style="position: sticky; z-index: 3; top:0px; height: 20px;" autocomplete="off" name="Search Stats" aria-description="Search Stat Types" type="search" id="floatingWindowSearchBar" placeholder="Search...">
-            <img class="clickableButton" decoding="async" tabindex="0" style="z-index: 2; border-radius: 8px; float: right; top: 0px; position:sticky;" width="20" height="20" src="../Icons/CancelIcon.svg" alt="Exit"/>
-            <table id="floatingWindowTable" style="width: calc(100% - 20px);">
-                <tbody></tbody>
-            </table>
-        </div>
-    </body>
-</html>
+this link will be removed soon.<br>please change your bookmark to <a href="../COSSTATLIST">this url</a> instead
