--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -1,200 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Web Playlist Creator</title>
-        <meta name="description" content="Play music in a playlist"/>
-        <link rel="icon" href="../Icons/PageFavicon.ico">
-        <link rel="manifest" href="../manifest.webmanifest" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="mobile-web-app-capable" content="yes" />
-        <script defer src="../Javascript/PlaylistCreator.js"></script>
-        <!-- <script defer src="../howler.js"></script> -->
-        <!-- <script src="../ServiceWorker.js"></script> -->
-        <link rel="stylesheet" href="../CSS/PlaylistCreator.css">
-        <link rel="stylesheet" href="../CSS/CompactMode.css" id="compactModeStyleLink" disabled>
-        <link rel="stylesheet" href="../CSS/background.css">
-    </head>
-    <body>
-        <div id="loadingGray"></div>
-        <div id="mobilePlaylistOptions">
-            <img class="clickableButton" id="mobileDeselectRows" style="border-radius: 8px;width: 25px;height: 30px;" src="../Icons/CancelIcon.svg" alt="Exit">
-            <div id="mobileSelectStatus" style="flex: 0 1 100%; user-select: none; font-size:20px; align-self: center;" class="scrollableText playingStatus text">0 selected</div>
-            <div style="display: flex; margin-left: auto; width: 100%; justify-content: flex-end;">
-                <div id="mobileContextButtons" style="display: flex;overflow: scroll;scrollbar-width: none;"></div>
-                <img class="clickableButton" id="moreOptionsSelectedRows" style="border-radius: 8px; width: 30px; height: 30px; margin-left: 5px; margin-right: 5px;" src="../Icons/MoreMenuIcon.svg" alt="More Options">
-            </div>
-        </div>
-        <div id="dragOverDisplay"><div style="position: fixed; top: 50vh; left: 50vw; transform: translate(-50%, -50%);" class="text" ><b>Drop Here to add Music</b></div></div>
-        <div style="z-index: 2; background-color: lightgrey; width: max-content; position: fixed; top: 0; left: 0; pointer-events: none; transform: translate(-9999px, 0px);" id="hoveredTimeDisplay"><div style="margin-left:1ch; margin-right:1ch; color: black; z-index: 2" class="prevent-select text"></div></div>
-
-        <input accept="audio/*" type="file" style="display: none;" id="0input" multiple>
-        <input accept="audio/*" type="file" style="display: none;" id="inputDirectory" multiple webkitdirectory>
-        <div style="display: flex">
-            <label for="0input"><img id="uploadFilesLabel" class="clickableButton" tabindex="0" data-onRightClick="uploadFileMenu" src="../Icons/UploadIcon.svg" width=20 height=20 alt=""/></label>
-            <div style="cursor: pointer; flex: 0 1 auto;" tabindex="0" class="scrollableText playingStatus text" id="currentFileName">Upload Files to Begin!</div>
-            <img tabindex="0" class="clickableButton" id="settingsButton" data-onRightClick="quickSettings" width=20 height=20 style="margin-left: auto;" src="../Icons/SettingsIcon.svg" alt="Settings"/>
-        </div>
-
-        <table class="mainTable">
-            <tbody>
-                <tr>
-                    <td style="white-space: nowrap;" class="tableBorder">
-                        <div style="height: 100%; margin-left: auto; margin-right: auto; text-align: center;">
-                            <div class="fileStatus" style="color: black;" id="0status"></div>
-                            <div id="firstDurationLabel" style="margin-right: 1ch; color: black;" class="text">00:00</div>
-                            <progress value="0" max="100" id="progress-bar"></progress>
-                            <div id="secondDurationLabel" style="margin-left: 1ch; color: black;" class="text">00:00</div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div style="display: flex; height: var(--mainTableControlsHeight); flex-direction: row;">
-                            <div id="modifiers" style="display: flex; justify-content: flex-start; flex-basis: 20%;">
-                                <label for="repeatButton" title="Loop Song (l)" style="width: calc(100% / 2); max-width: 225px; height: 100%;" tabindex="0" class="clickableButton tableBorder">
-                                    <input type="checkbox" style="display: none;" id="repeatButton" class="repeatButton" title="Activate to repeat the current song indefinitely">
-                                    <!--<img class="clickableButton repeatIcon" enabledVersion="true" alt="Loop Song Enabled" src="../Icons/Repeat1Icon.svg"/>-->
-                                </label>
-                                <input type="checkbox" style="visibility: hidden; position: absolute;" class="shuffle" id="shuffleButton" title="Activate to play the songs in a random order.">
-                                <!-- https://commons.wikimedia.org/wiki/File:Shuffle_(50683)_-_The_Noun_Project.svg -->
-                                <label for="shuffleButton" title="Shuffle Songs (s)" style="width: calc(100% / 2); max-width: 225px; height: 100%;" tabindex="0"><svg class="clickableButton tableBorder" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" width="50%" height="50%" xml:space="preserve"><path d="M83.745,69.516l-8.181,5.666V67.08c0,0-9.253,0-10.93,0c-15.551,0-29.989-27.566-41.66-27.566H8.069v-6.542h14.906  c18.125,0,29.063,27.65,41.66,27.65c1.76,0,10.93,0,10.93,0V52.52l8.181,5.666l8.186,5.665L83.745,69.516z"/><path d="M50.619,45.877c0.375,0.396,0.749,0.794,1.123,1.19c4.344-4.354,8.521-7.69,12.894-7.69c1.76,0,10.93,0,10.93,0v8.103  l8.181-5.666l8.186-5.666l-8.186-5.666l-8.181-5.665v8.102c0,0-9.253,0-10.93,0c-6.048,0-11.926,4.172-17.539,9.269  C48.298,43.419,49.472,44.659,50.619,45.877z"/><path d="M37.986,54.719c-0.633-0.626-1.276-1.261-1.923-1.894c-4.649,4.337-9.037,7.661-13.088,7.661H8.069v6.541h14.906  c6.979,0,12.889-4.103,18.243-9.145C40.123,56.824,39.044,55.763,37.986,54.719z"/></svg></label>
-                            </div>
-                            <div id="controls" style="display: flex; justify-content: center; flex-basis: 60%;">
-                                <div id="skipBack" tabindex="0" class="cell clickableButton tableBorder" title="Skip Back (Shift + P)" style="width: calc(100% / 5); max-width: 270px;">
-                                    <img class="playBackIcon" width="30" height="30" style="width:50%; height:100%;" src="../Icons/SkipIcon.svg" alt="Previous Song"/>
-                                </div>
-                                <div id="seekBack" tabindex="0" class="cell clickableButton tableBorder" title="Seek Back (LeftArrow)" style="width: calc(100% / 5); max-width: 270px;">
-                                    <img class="playBackIcon" width="60" height="30" style="width:100%; height:100%" src="../Icons/SeekIcon.svg" alt="Seek Backwards"/>
-                                </div>
-                                <div tabindex="0" class="cell clickableButton tableBorder" title="Play/Pause (Space | K)" style="width: calc(100% / 5); max-width: 270px;">
-                                    <label for="playpause" class="clickableButton">
-                                        <input type="checkbox" id="playpause" style="display: none"/>
-                                    </label>
-                                </div>
-                                <div id="seekForward" tabindex="0" class="cell clickableButton tableBorder" title="Seek Forward (RightArrow)" style="width: calc(100% / 5); max-width: 270px;">
-                                    <img class="playBackIcon" width="60" height="30" style="width:100%; height:100%; transform: scaleX(-1);" src="../Icons/SeekIcon.svg" alt="Seek Forwards"/>
-                                </div>
-                                <div id="skipForward" tabindex="0" class="cell clickableButton tableBorder" title="Skip Forward (Shift + P)" style="width: calc(100% / 5); max-width: 270px;">
-                                    <img class="playBackIcon" width="30" height="30" style="width:50%; height:100%; transform: scaleX(-1);" src="../Icons/SkipIcon.svg" alt="Next Song"/>
-                                </div>
-                            </div>
-                            <div id="modifiers1" style="display: flex; justify-content: flex-end; flex-basis: 20%;">
-                                <div style="position: relative; width: calc(100% / 3); max-width: 150px;" class="tableBorder">
-                                    <img class="playBackIcon" src="../Icons/HeadphonesIcon.svg" alt="Pan Changer" style="width:100%; height:100%; position: absolute; left:50%; transform: translate(-50%, 0%)">
-                                    <div tabindex="0" id="planPanPullsOpen" class="pullsOpen" style="visibility: visible; position: absolute;">
-                                        <div>
-                                            <label for="0playPan" style="color: black; position: absolute;">0%</label>
-                                            <input tabindex="0" type="range" id="0playPan" max=1 min=-1 value=0 step=0.01 list='commonPanValues' style="writing-mode: vertical-lr; direction: rtl; width: 100%; height: 100%; position: relative;" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div style="position: relative; width: calc(100% / 3); max-width: 150px;" class="tableBorder">
-                                    <img class="playBackIcon" src="../Icons/PlaybackSpeedIcon.svg" alt="Playback Speed Changer" style="width:100%; height:100%; position: absolute; left:50%; transform: translate(-50%, 0%);">
-                                    <div tabindex="0" id="playRatePullsOpen" class="pullsOpen" style="position: absolute; justify-content: center; display: flex; visibility: visible;">
-                                        <div style="display: flex; flex-direction: column;">
-                                            <input type="number" style="width: calc(100% - 7.6px)" class="playRate" id="0playRate" value="1" step="0.01" min="0" inputmode="numeric">
-                                            <input type="range" id="0playRateSlider" list='commonVolumesAndRates' max=2 min=0 value=1 step=0.01 style="writing-mode: vertical-lr; direction: rtl; width: 100%; height: 100%; flex-grow: 1" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div style="position: relative; width: calc(100% / 3); max-width: 150px;" title="Mute (M)" class="tableBorder">
-                                    <input style="display: none;" class="muteCheckbox" type="checkbox" id="0Mute">
-                                    <div>
-                                        <!-- <img  src="../Icons/SpeakerIcon.svg" alt="Volume Changer & Mute Button"/> -->
-                                        <svg style="width:100%; height:100%; position: absolute; left:50%; transform: translate(-50%, 0%)" xmlns="http://www.w3.org/2000/svg" version="1.0" width="500" height="500" viewBox="0 0 75 75"><path d="M39.389,13.769 L22.235,28.606 L6,28.606 L6,47.699 L21.989,47.699 L39.389,62.75 L39.389,13.769z" style="stroke-width:5;stroke-linejoin:round;"/><path d="M48,27.6a19.5,19.5 0 0 1 0,21.4M55.1,20.5a30,30 0 0 1 0,35.6M61.6,14a38.8,38.8 0 0 1 0,48.6" style="fill: none;stroke-width:5;stroke-linecap:round"/></svg>
-                                        <div tabindex="0" id="volumePullsOpen" class="pullsOpen" data-onRightClick="volumeBoost" style="visibility: visible; position: absolute;">
-                                            <div>
-                                                <label for="0playVolume" style="color: black; position: absolute;">100%</label>
-                                                <input type="range" id="0playVolume" list='commonVolumesAndRates' max=1 min=0 value=1 step=0.01 style="writing-mode: vertical-lr; direction: rtl; width: 100%; height: 100%; position: relative;" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <table tabindex="0" id="Playlist_Viewer">
-            <tbody>
-            <tr>
-                <th>Playlist</th>
-            </tr>
-            </tbody>
-        </table>
-
-        <datalist style="display: none" id="commonVolumesAndRates"><option value="0"></option><option value="0.25"></option><option value="0.5"></option><option value="0.75"></option><option value="1"></option><option value="1.25"></option><option value="1.5"></option><option value="1.75"></option><option value="2"></option><option value="2.5"></option><option value="3"></option><option value="3.5"></option><option value="4"></option><option value="4.5"></option><option value="5"></option><option value="5.5"></option><option value="6"></option><option value="6.5"></option><option value="7"></option><option value="7.5"></option><option value="8"></option><option value="8.5"></option><option value="9"></option><option value="9.5"></option><option value="10"></option></datalist>
-        <datalist style="display: none" id="commonPanValues"><option value="-1"></option><option value="-0.5"></option><option value="0"></option><option value="0.5"></option><option value="1"></option></datalist>
-        
-        <dialog id="settingsPage" inert>
-            <div>
-                <img class="clickableButton" id="exitSettingsButton" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
-                <div>
-                    Preload Type: <select id="preloadType" name="preloadType">
-                        <option value="process" selected>Download & Process</option>
-                        <option value="download">Download only</option>
-                    </select>
-                </div>
-                <div>
-                    <div class="largerSize scrollableText text" style="display: block;" title="Preload Songs Distance (# of songs before and after current song are preloaded (RAM INTENSIVE)):">Preload Songs Distance (# of songs before and after current song are preloaded (RAM INTENSIVE)):</div>
-                    <input type="range" id="preloadDistance" max=1 min=0 value=1 step=1 style="width: 75%; display: inline-block; position: relative; top: -4px; transform: translate(0%, 50%);">
-                    <label for="preloadDistance" style="display: inline-block;">Value: 1</label>
-                </div>
-                <div>
-                    <input style="width: 40%; margin-right: 5px;" type="number" inputmode="numeric" value=10 step=1 min=0 id="seekDuration"><label for="seekDuration">Seek Duration: </label><label id="seekDurationDisplay" for="seekDuration">10 sec</label>
-                </div>
-                <div>
-                    <label><input type="checkbox" id="compactMode" autocomplete="off">Compact Mode</label>
-                </div>
-                <div>
-                    <label><input type="checkbox" id="seekDistanceProportional" autocomplete="off" checked>Keep seek distance proportional with play speed</label>
-                </div>
-                <div>
-                    <label><input type="checkbox" id="skipUnplayable" autocomplete="off" checked>Skip files that are unsupported</label>
-                </div>
-                <div>
-                    <label><input type="checkbox" id="showLengths" autocomplete="off" checked>Display song durations</label>
-                </div>
-                <div>
-                    <button id="enterPIP" type="button"></button>
-                </div>
-                <div style="text-align:left"><a href="../HTML/WebLooper.html">Web Looper</a></div>
-            </div>
-        </dialog>
-        <dialog id="errorPopup" inert>
-            <div>
-                <img tabindex="0" class="clickableButton" id="exitErrorPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
-                <div>
-                    <h1>Errors:</h1>
-                    <dl id="errorList"></dl>
-                </div>
-            </div>
-        </dialog>
-        <dialog id="deprecatedPopup" inert>
-            <div>
-                <table style="width: 100%;">
-                    <tbody>
-                        <tr>
-                            <th style="text-align: center;">
-                                <img tabindex="0" class="clickableButton" id="exitDeprecatedPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit">
-                                <h1>INACTIVE</h1>
-                            </th>
-                        </tr>
-                        <tr>
-                            <td>
-                                THIS URL IS OUT OF DATE AND COULD BREAK IN THE FUTURE. THE NEW VERSION IS LOCATED AT <a href="https://cosyhamster.github.io">https://cosyhamster.github.io</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </dialog>
-
-        <div id="rightClickContextMenu" style="interpolate-size: allow-keywords;">
-            <div class="contextOption"></div>
-        </div>
-    </body>
-</html>
+this link will be removed soon.<br>please change your bookmark to <a href="../PlaylistCreator">this url</a> instead
+<!--<script>-->
+<!--navigation.navigate("../PlaylistCreator");-->
+<!--</script>-->
