add calc framerate ability to frameskipper

--- a/FrameSkipping/index.html
+++ b/FrameSkipping/index.html
@@ -13,6 +13,7 @@
 		<video id="video" style="width:100%;max-height:calc(100% - 21px);object-fit:contain;" controls></video>
 		<div>
 			<label>Video Frame Rate: <input type="number" id="videoFrameRate" value="" step="0.0001" min="0.0001"></label>
+			<button id="calcFramerate">Calc Framerate</button>
 			<button id="calcCurrentVideoFrame">Calc Current Video Frame</button>
 			<output id="outputFrame" name="currentFrame" for="videoFrameRate calcCurrentVideoFrame"></output>
 		</div>
